# sxo

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  biome.json  cliff.toml  package.json  pnpm-lock.yaml  prompt.txt
.github/workflows/: build-wasm.yml  ci.yml  e2e.yml  publish.yml  release.yml  tests-js.yml  tests-rs.yml  web.yml
.rules/: jsdoc.md  jsx-standards.md  testing.instructions.md
components/: AGENTS.md  README.md  biome.json  package.json  playwright.config.js  pnpm-lock.yaml  sxo.config.js
components/e2e/: accordion.test.js  alert-dialog.test.js  alert.test.js  avatar.test.js  badge.test.js  breadcrumb.test.js  button.test.js  card.test.js  checkbox.test.js  dialog.test.js  dropdown-menu.test.js  form.test.js  input.test.js  label.test.js  pagination.test.js  popover.test.js  radio-group.test.js  select-menu.test.js  select.test.js  skeleton.test.js  slider.test.js  switch.test.js  table.test.js  tabs.test.js  textarea.test.js  theme-toggle.test.js  toast.test.js  tooltip.test.js
components/src/: fonts.css  styles.css
examples/basic/: jsconfig.json  package.json  pnpm-lock.yaml
examples/bun/: README.md  package.json
examples/deno/: README.md  deno.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/node/: README.md  (+1 more)
scripts/: test-runtimes.sh  wasm-build.js
sh/: update_deps.sh  update_template_versions.sh
src/: lib.rs
templates/: README.md  package.json  playwright.config.js  pnpm-lock.yaml
web/: .gitignore  jsconfig.json  package.json  sxo.config.js  wrangler.jsonc
(+308 files in other folders)
