[package]
name = "jsx_precompile"
version = "0.1.0"
authors = ["Víctor García"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JSX precompiler using Rust + wasm-bindgen"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.101"
console_error_panic_hook = { version = "0.1", optional = true }
regex = "1.11.2"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
