[package]
name = "jsx_transformer"
version = "0.1.0"
authors = ["Víctor García"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "JSX transformer using Rust + wasm-bindgen"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.105"
console_error_panic_hook = { version = "0.1", optional = true }
